<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reitittäjä</string>
    <string name="title_section1">Journey planner</string>
    <string name="title_section2">Stops</string>
    <string name="title_section3">Lines</string>
    <string name="title_section4">Map</string>
    <string name="title_section5">Favorites</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_swap_locations">Swap</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="journey_planner_from">From</string>
    <string name="journey_planner_to">To</string>
    <string name="journey_planner_when">When</string>
    <string name="journey_planner_date">Date</string>
    <string name="journey_planner_start_time">Departure</string>
    <string name="journey_planner_arrival_time">Arrival</string>
    <string name="journey_planner_how">How</string>
    <string name="journey_planner_all">All</string>
    <string name="journey_planner_bus">Bus</string>
    <string name="journey_planner_train">Train</string>
    <string name="journey_planner_metro">Metro</string>
    <string name="journey_planner_tram">Tram</string>
    <string name="journey_planner_uline_bus">Uline bus</string>
    <string name="journey_planner_service_bus">Service bus</string>
    <string name="journey_planner_only_walking">Only walking</string>
    <string name="journey_planner_only_cycling">Only cycling</string>
    <string name="journey_planner_search">Search</string>
    <string name="journey_planner_now_time">Now</string>
    <string name="journey_planner_now_date">Today</string>
    <string name="journey_planner_current_location">Current location</string>
    <string name="favorite_dialog_save_button">Save</string>
    <string name="favorite_dialog_header">Save current location to favorites</string>
    <string name="favorite_dialog_list">Favorites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_time">Time</string>
    <string name="pick_date">Date</string>
    <string name="reset_time_and_date">Reset</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_route_list">Routes</string>
    <string name="title_route_detail">Route Detail</string>
    <string name="title_activity_maps">Map</string>
    <string name="bus">bus</string>
    <string name="metro">metro</string>
    <string name="train">train</string>
    <string name="tram">tram</string>
    <string name="uline">uline</string>
    <string name="service">service</string>
    <string name="walk">walk</string>
    <string name="cycle">cycle</string>
    <string name="favorite_description">Description</string>
    <string name="favorite_save">Save</string>
    <string name="favorite_cancel">Cancel</string>
    <string name="new_favorite_dialog_header">Save as favorite</string>


    <string name="walk_speed_slow">slow (40 m/min)</string>
    <string name="walk_speed_normal">normal (70 m/min)</string>
    <string name="walk_speed_fast">fast (100 m/min)</string>
    <string name="walk_speed_running">running (200 m/min)</string>

    <string name="route_type_default">default</string>
    <string name="route_type_fastest">fastest</string>
    <string name="route_type_least_transfers">least transfers</string>
    <string name="route_type_least_walking">least walking</string>

    <string name="transportation_mode_icon_text">Transportation mode icon</string>
    <string name="favorite_icon_text">Favorite</string>

</resources>
