<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="com.devglyph.reitittaja.fragments.SaveToFavoritesFragment">

    <TextView
        android:id="@+id/favorite_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite_description" />

    <EditText
        android:id="@+id/favorite_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/favorite_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="left|center_vertical"
            android:text="@string/favorite_cancel" />

        <Button
            android:id="@+id/favorite_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="right|center_vertical"
            android:text="@string/favorite_save" />



        </LinearLayout>


</LinearLayout>
